components/Player/Playlist/Playlist.module.scss
@use '@styles/colors';
@use '@styles/grid';

$padding-v: 10px;
$padding-h: 20px;

$playlist-text-color: colors.$white-a-80;
$playlist-text-color--active: colors.$white;
$playlist-background-color: colors.$grey-900;
$playlist-background-color--active: colors.$primary-500;
$playlist-thumbnail-size: 40px;
$playlist-thumbnail-corner-radius: 10px;
$playlist-divider-color: colors.$grey-400;
$playlist-divider-size: 1px;
$playlist-header-text-color: colors.$white;
$playlist-header-icon-color: colors.$white-a-50;
$playlist-header-icon-color--active: colors.$white;

:export {
  --playlist-text-color: #{$playlist-text-color};
  --playlist-text-color--active: #{$playlist-text-color--active};
  --playlist-background-color: #{$playlist-background-color};
  --playlist-background-color--active: #{$playlist-background-color--active};
  --playlist-background-image-position--active: top;
  --playlist-background-image-size--active: 100vh;
  --playlist-thumbnail-size: #{$playlist-thumbnail-size};
  --playlist-thumbnail-corner-radius: #{$playlist-thumbnail-corner-radius};
  --playlist-divider-color: #{$playlist-divider-color};
  --playlist-divider-size: #{$playlist-divider-size};
  --playlist-header-text-color: #{$playlist-header-text-color};
  --playlist-header-icon-color: #{$playlist-header-icon-color};
  --playlist-header-icon-color--active: #{$playlist-header-icon-color--active};
}

.root {
  display: grid;
  grid-template-rows: min-content 1fr;

  background-color: var(--playlist-background-color);

  color: var(--playlist-header-text-color);
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;

  padding-block: $padding-v;
  padding-inline: $padding-h;

  border-bottom-style: solid;
  border-bottom-width: var(--playlist-divider-size);
  border-bottom-color: var(--playlist-divider-color);

  font-weight: 700;
}

.button {
  display: grid;
  grid-template-columns: 2em 1fr;
  align-items: center;
  gap: 0.5em;

  padding: 0;

  font-weight: inherit;
  line-height: 1;
}

.buttonIcon {
  fill: var(--playlist-header-icon-color);

  &.up {
    --up-fill-color: var(--playlist-header-icon-color--active);
  }
  &.down {
    --down-fill-color: var(--playlist-header-icon-color--active);
  }
}

.playlist {
  overflow: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.tracks {
  display: grid;
  align-content: start;
}

.track {
  position: relative;
  display: grid;
  grid-template-columns: var(--playlist-thumbnail-size) 1fr min-content;
  grid-gap: $padding-h;
  align-items: center;
  overflow: hidden;

  margin: 0;
  padding: $padding-v $padding-h;

  border-bottom-style: solid;
  border-bottom-width: var(--playlist-divider-size);
  border-bottom-color: var(--playlist-divider-color);

  color: var(--playlist-text-color);
  font-size: clamp(0.8rem, 4.5vw, 1rem);

  &:last-of-type {
    border-bottom: none;
  }

  &::before {
    content: '';
    position: absolute;
    display: block;
    inset: ($padding-v * -1) ($padding-h * -1);
    grid-column: 1 / -1;
    grid-row: 1 / -1;
  }

  &:focus {
    outline: none;
  }

  &:focus-visible {
    &::before {
      opacity: 0.15;
    }
  }

  &.isCurrentTrack {
    color: var(--playlist-text-color--active);

    &::before {
      opacity: 0.35;
    }
  }

  &.isCurrentTrack,
  &:focus-visible {
    & > * {
      position: relative;
    }

    &::before {
      background-color: var(
        --accent-color,
        var(--playlist-background-color--active)
      );
      background-image: linear-gradient(
        to bottom right,
        var(--accent-gradient, transparent)
      );
      background-attachment: fixed;
      background-position: 0 var(--playlist-top);
      background-size: 100vw var(--playlist-height);
    }
  }

  &.isExplicit {
    grid-template-columns: var(--playlist-thumbnail-size) 1fr min-content min-content;
  }
}

.trackThumbnail {
  @include grid.stacked(after);
  overflow: hidden;
  border-radius: var(--playlist-thumbnail-corner-radius);
  &::after {
    content: '';
    z-index: 1;
    box-shadow: inset 0 0 0 2px var(--divider-color);
    border-radius: inherit;
  }
}

.trackTitle {
  justify-self: start;

  font-weight: bold;
  text-align: left;
}

.explicit {
  fill: currentColor;
  width: 1.5em;
}

